--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@hookform/resolvers": "^5.2.2",
     "@mantine/core": "^8.3.13",
     "@mantine/hooks": "^8.3.13",
+    "@tanstack/react-query": "^5.90.20",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.12.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
