--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/core": "^8.3.13",
     "@mantine/hooks": "^8.3.13",
     "@tanstack/react-query": "^5.90.20",
+    "axios": "^1.13.3",
     "embla-carousel": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
